objects/Rated_Item__c.object
<CustomObject>
    <description>Created By :- Veeresh Alur
Date: 27-Feb-14
Capability: ES Social Learning Platform
Release: 2
Description: Rated Item</description>
    <fields>
        <fullName>Item_Identifier__c</fullName>
        <label>Item Identifier</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nbr_of_Users_Rated__c</fullName>
        <label>Nbr of Users Rated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating_Average__c</fullName>
        <label>Rating Average</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Rated Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RI-{00000000}</displayFormat>
        <label>Rated Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rated Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>